# Ragloxv3

./: .env.example  .gitignore  COMPLETE_SUCCESS_REPORT.md  README.md  pyproject.toml  run.py  run_demo.py  run_real_ai_demo.py
data/: raglox_executable_modules.json  raglox_indexes_v2.json
docs/: E2E_DEMO.md  GAP_ANALYSIS_REMEDIATION_PLAN.md  GAP_REMEDIATION_STATUS.md  INTEGRATION_COMPLETE_REPORT.md
infrastructure/: .env.example  docker-compose.yml
infrastructure/postgres/: init.sql  seed.sql
infrastructure/redis/: key-schema.md  redis.conf
infrastructure/vulnerable-target/: Dockerfile  admin.html  entrypoint.sh  index.html  nginx-default.conf
src/: __init__.py
src/api/: __init__.py  auth_routes.py  billing_routes.py  exploitation_routes.py  infrastructure_routes.py  knowledge_routes.py  main.py  routes.py  terminal_routes.py  websocket.py
src/controller/: __init__.py  mission.py
src/core/: __init__.py  blackboard.py  config.py  exceptions.py  knowledge.py  logging.py  models.py  token_store.py  validators.py
src/core/billing/: __init__.py  models.py  service.py
src/core/database/: __init__.py  base_repository.py  connection.py  mission_repository.py  organization_repository.py  user_repository.py
src/core/llm/: __init__.py  base.py  blackbox_provider.py  local_provider.py  mock_provider.py  models.py  openai_provider.py  prompts.py  service.py
src/executors/: __init__.py  base.py  factory.py  local.py  models.py  runner.py  ssh.py  winrm.py
src/exploitation/adapters/: metasploit_adapter.py
src/exploitation/c2/: session_manager.py
src/exploitation/core/: orchestrator.py
src/exploitation/exploits/: eternalblue.py
src/exploitation/knowledge/: exploit_repository.py
src/exploitation/payloads/: payload_generator.py
src/exploitation/post_exploitation/: __init__.py  credential_harvester.py  network_pivoting.py
src/infrastructure/cloud_provider/: oneprovider_client.py
src/specialists/: __init__.py  analysis.py  attack.py  base.py  recon.py
tests/: conftest.py  test_analysis_reflexion.py  test_api.py  test_blackboard.py  test_config.py  test_controller.py  test_core_models.py  test_distributed_claiming.py  test_exceptions.py  test_executors.py  test_integration.py  test_knowledge.py  test_knowledge_api.py  test_llm_integration.py  test_logging.py  test_logic_trigger_chain.py  test_performance.py  test_sec_03_04.py  test_specialists.py  test_validators.py  test_zombie_task_recovery.py
tests/api_suite/: test_chat.py
webapp/: .env.test  INSTRUCTIONS.md  QA_INSPECTION_PROMPT.md  test_vm_provisioning_comprehensive.py  vm_test_results.json
webapp/config/postgres/: init.sql
webapp/database/migrations/: 06_validate_production_db.py  07_fix_schema.sql  08_quick_validation.py  09_production_tests.py  PRODUCTION_READINESS_REPORT.md  SUMMARY_AR.md  final_test_result.txt  production_test_result.txt  quick_validation_result.txt  validation_report.txt
webapp/docs/: FRONTEND_NEW_API.ts  FRONTEND_NEW_TYPES.ts  FRONTEND_REQUIREMENTS_COMPLETE.md  REAL_INTEGRATION_TESTING.md
webapp/frontend/client/src/: App.tsx  index.css
webapp/frontend/client/src/components/layout/: AppLayout.tsx
webapp/frontend/client/src/components/manus/: AIChatPanel.tsx  DualPanelLayout.tsx  EnhancedSidebar.tsx  FilePreview.tsx  PlaybackControls.tsx  ProgressBar.tsx  SuggestedActions.tsx  TerminalPanel.tsx  UtilityPanel.tsx  index.ts
webapp/frontend/client/src/contexts/: ThemeContext.tsx
webapp/frontend/client/src/hooks/: useWebSocket.ts
webapp/frontend/client/src/pages/: Exploitation.tsx  Infrastructure.tsx  Missions.tsx  Operations.tsx  Reports.tsx  Security.tsx  Settings.tsx  Tools.tsx  Workflow.tsx
webapp/frontend/client/src/types/: index.ts
webapp/scripts/: setup_stripe_products.py  test_stripe_integration.py
webapp/tests/: intensive_real_attack_tests.py  intensive_real_results.json  quick_tools_results.json
webapp/tests/real_integration/: __init__.py  conftest.py  run_tests.py  test_environment_validation.py  test_multistage_scenarios.py  test_ssh_connection.py  test_tool_execution.py
